samples/_failures_safe/1761471351_dc2fca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fd8f78b.c: In function ‘main’:
./samples/SAFE/__tmp_7fd8f78b.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
